# Poker-Equity-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: cards.h  evaluator.h  prng.h  range.h  simulator.h
src/: evaluator.cpp  main.cpp  range.cpp  simulator.cpp  tables.cpp
test/: cards_test.cpp  evaluator_test.cpp  prng_test.cpp  range_test.cpp  simulator_test.cpp
